added mme khaoula's testimony
what hesaid.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #b8aeae;">Quality</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #b8aeae;">Schooling</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
             </div>
             <div class="row align-items-center">
@@ -408,7 +408,7 @@
                         <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">Embedded Systems</h4>
                     </div>
-                    <p class="text-white-50">I am very passionate about embdded systems and low level programming languages and inspite of having moderate and modest skills in this domain it is one of the most desciplines in computer science i find my self comfortable with and learn on the fly </p>
+                    <p class="text-white-50">I am very passionate about embdded systems and low level programming languages and inspite of having moderate and modest skills in this domain it is one of the most desciplines in computer science i find my self comfortable with and learn it on the fly </p>
                 </div>
 
 
@@ -478,7 +478,7 @@
     <div class="container-fluid py-5" id="testimonial">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Refrance</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Testimonial</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Proffessors Say</h1>
             </div>
             <div class="row justify-content-center">
@@ -488,22 +488,25 @@
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
+                            <h5 class="font-weight-bold m-0">Professor Name</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0">Ben Slimen Iyed</h5>
+                            <span>email</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4 text-white-50">During this latter year, he has demonstrated a very high regularity and a specific ability in his
+                                studies proving a sincere interest in work and research. He was the only student who was able to
+                                develop the requested project that meets 100% of the specifications required for the above-
+                                mentioned course. His results show a highly qualified effort on the technical and scientific level.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0 text-white">Bedoui Kaoula</h5>
+                            <span>khaoula.elbedoui@enicarthage.rnu.tn</span>
                         </div>
                     </div>
                 </div>
