--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">Quality</a>
+                <a href="#qualification" class="nav-item nav-link">schooling</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
+                <a href="#service" class="nav-item nav-link">Domains</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#testimonial" class="nav-item nav-link">Review</a>
+                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
            
             </div>
         
@@ -517,7 +517,7 @@
 
 
     <!-- Blog Start -->
-    <div class="container-fluid pt-5" id="blog">
+    <div class="container-fluid pt-5" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">portfolio</h1>
