final fixes for today

--- a/index.html
+++ b/index.html
@@ -193,7 +193,10 @@
                             <h5 class="font-weight-bold mb-1 text-white">Internship</h5>
                             <p class="mb-2 text-white"><strong>Centre National d'Informatique</strong> | <small>2022/07/01 - 2022/09/01</small></p>
                             <p class="text-white-50">Following my first Internship as i felt my work there  was not yet done i came back for a second one to build a high  availability application using a load balancer
-                               ,angular , spring boot and  the replication  feature </p>
+                               ,angular , spring boot and  the replication  feature during this internship i accomplished the following tasks:
+                            <ul></ul>
+                            
+                            </p>
                         </div>
                     </div>
                 </div>
