--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 The Curriculum takes a deep dive into diverse advanced topics in both maths and  physics .
                                 We also got the basics in  electrical engineering and mechanical engineering solving all kinds of equations and calculating all sorts of tensors and matrices  
                                 It is worthy of noting that I was the <strong>major of the freshman year</strong> during this study plan in the school year 2018-2019 .
-                                In the end of these two years of hardships I went through the national exam of admittance of engineers in which I succeeded and were assigned by rank 516/1300 to the nation school of engineers 
+                                In the end of these two years of hardships I went through the national exam of admittance of engineers in which I succeeded and were assigned by rank 516/1300 to the national school of engineers 
                             </p>
                         </div>
                         <div class="position-relative mb-4">
@@ -194,7 +194,14 @@
                             <p class="mb-2 text-white"><strong>Centre National d'Informatique</strong> | <small>2022/07/01 - 2022/09/01</small></p>
                             <p class="text-white-50">Following my first Internship as i felt my work there  was not yet done i came back for a second one to build a high  availability application using a load balancer
                                ,angular , spring boot and  the replication  feature during this internship i accomplished the following tasks:
-                            <ul></ul>
+                            <ul class="text-white-50">
+                                <li>set up a virtual environement with different nodes</li>
+                                <li>set up and configure an ha load balancer node</li>
+                                <li>set up two intances/nodes , each of which is running an instance of the web application front end and backend</li>
+                                <li>set up two PostgreSQL nodes : a master node receiving traffic from both application and a slave node receiving replication traffic</li>
+                                <li>develop a proof of concept web application using mvn spring boot and angular with very simple ui </li>
+                                <li>benchmark the set up using apache benchmark tool</li>
+                            </ul>
                             
                             </p>
                         </div>
