--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6 class="text-white">Name: <span class="text-white-50">Mahdi Ben Mansour</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6 class="text-white">Birthday: <span class="text-white-50">24 May 1990</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6 class="text-white">Birthday: <span class="text-white-50">24th May 1999</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Degree: <span class="text-white-50">Engineering</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Experience: <span class="text-white-50">1</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Phone: <span class="text-white-50">+216 28 079 643</span></h6></div>
