added the vscode logo

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         <i class="fa fa-2x fa-lock service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">Security</h4>
                     </div>
-                    <p class="text-white-50">one of my most favourite domains and i find my self eager to learn more everyday i even listen to security podcasts and am up to date to hackers arise blog and hope one day I too can join the dragons and be dangerous XD </p>
+                    <p class="text-white-50">one of my most favourite domains and i find my self eager to learn more everyday , i even listen to security podcasts and am up to date to hackers arise blog and hope one day I too can join the dragons and be dangerous too XD </p>
 
                 </div>
                 
@@ -486,7 +486,7 @@
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-cloud service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0 text-white">Cloud Computing</h4>
+                        <h4 class="font-weight-bold m-0 text-white">Cloud Computing and devops</h4>
                     </div>
                     <p class="text-white-50">I only have the basics in this domain and even though i am cloud fundamentals certified by aws i would like to explore this domain further </p>
                 </div>
@@ -558,11 +558,7 @@
                             <div class="col-lg-4 mb-5">
 
                                 <div class="position-relative mb-4">
-                                    <img class="img-fluid rounded w-100" src="img/blog-1.jpg" alt="">
-                                    <div class="blog-date">
-                                        <h4 class="font-weight-bold mb-n1">01</h4>
-                                        <small class="text-white text-uppercase">Jan</small>
-                                    </div>
+                                    <img class="img-fluid rounded w-100" src="img/vscode.png" alt="">
                                 </div>
                                 <h4 class="font-weight-medium text-white">VsCode</h4>
                                 <h5 class="font-weight-medium text-white-50">my swiss army knife</h5>
