--- a/index.html
+++ b/index.html
@@ -591,21 +591,19 @@
                                     <img class="img-fluid rounded w-100" src="img/github.png" alt="">
                                 </div>
                                 <h4 class="font-weight-medium text-white">GitHub </h4>
-                                <h5 class="font-weight-medium text-white-50">I mean comon if one can't use git and github might as well quit , though i'm a novice to github i would love to master it , i'm sure during work i will as i believe this comes with experience</h5>
+                                <h5 class="font-weight-medium text-white-50">I mean comon if one can't use git and github might as well quit .Though I'm a novice to github i would love to master it , i'm sure during work i will as i believe this comes with experience</h5>
                               
                             </div>
 
-                        <div class="col-lg-4 mb-5">
-                            <div class="position-relative mb-4">
-                                <img class="img-fluid rounded w-100" src="img/blog-3.jpg" alt="">
-                                <div class="blog-date">
-                                    <h4 class="font-weight-bold mb-n1">01</h4>
-                                    <small class="text-white text-uppercase">Jan</small>
+                            <div class="col-lg-4 mb-5">
+
+                                <div class="position-relative mb-4">
+                                    <img class="img-fluid rounded w-100" src="img/unity.png" alt="">
                                 </div>
+                                <h4 class="font-weight-medium text-white">Unity</h4>
+                                <h5 class="font-weight-medium text-white-50">seeing my creation come to life and hunt me down is like the feeling of birth, unity is my favorite game engine because it uses c# which is relatively easy to use </h5>
+                              
                             </div>
-                            <h5 class="font-weight-medium mb-4">Rebum lorem no eos ut ipsum diam tempor sed rebum elitr ipsum</h5>
-                            <a class="btn btn-sm btn-outline-primary py-2" href="">Read More</a>
-                        </div>
 
 
                         <div class="col-lg-4 mb-5">
