--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                                 <div class="position-relative mb-4">
                                     <img class="img-fluid rounded w-100" src="img/obonto.png" alt="">
                                 </div>
-                                <h4 class="font-weight-medium text-white">Ubunto </h4>
+                                <h4 class="font-weight-medium text-white">Ubuntu </h4>
                                 <h5 class="font-weight-medium text-white-50">Even though falls in popularity to mint ,I, being the debian noob that i am use ubuntu for my daily tasks and work</h5>
                               
                             </div>
@@ -728,7 +728,7 @@
                                 <img class="img-fluid rounded w-100" src="img/springboot.png" alt="">
                             </div>
                             <h4 class="font-weight-medium text-white">spring</h4>
-                            <h5 class="font-weight-medium text-white-50">Most of my backend requiring projects were done using this wonder full framework , it is  good for both quick prototyping and solid production ready code</h5>
+                            <h5 class="font-weight-medium text-white-50">Most of my backend requiring projects were done using this wonderful framework , it is  good for both quick prototyping and solid production ready code</h5>
                           
                         </div>
 
