--- a/index.html
+++ b/index.html
@@ -849,6 +849,7 @@ function closePopup(popup) {
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">Purple Ninja</h2>
                             <p id="popupText" class="text-white">This game is set in the naruto world and you control the character moves using your webcame and hand gestures , this is a simple proof of concept and not a finished project and is intended to show my capability of developping computer vision reliant applications</p>
+                            <p  class="text-white">a demonstration can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup');" aria-label="Close popup" class="btn btn-sm btn-outline-primary py-2">Close</button>
                         </div>
                     </div>
