now open for business

--- a/index.html
+++ b/index.html
@@ -856,8 +856,8 @@ function closePopup(popup) {
 
                 </div>
                
-
-                <div class="col-lg-4 mb-5">
+                <p>This section is still under construction ...</p>
+                <!-- <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/blog-2.jpg" alt="">
                         <div class="blog-date">
@@ -924,7 +924,7 @@ function closePopup(popup) {
                     </div>
                     <h5 class="font-weight-medium mb-4">Rebum lorem no eos ut ipsum diam tempor sed rebum elitr ipsum</h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">Read More</a>
-                </div>
+                </div> -->
 
 
 
