fixed testimonies momentarily

--- a/index.html
+++ b/index.html
@@ -514,17 +514,17 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4 text-white-50">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4 text-white-50">working on it ...</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0 text-white">Houcemedine Hermassi</h5>
-                            <span>Profession</span>
+                            <span>Security Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4 text-white-50">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4 text-white-50">working on it ...</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0 text-white">Ben Slimen Iyed</h5>
-                            <span>iyed.benslimen@enicar.ucar.tn</span>
+                            <span>Embedded systems professor</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
@@ -534,7 +534,7 @@
                                 mentioned course. His results show a highly qualified effort on the technical and scientific level.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0 text-white">Bedoui Kaoula</h5>
-                            <span>khaoula.elbedoui@enicarthage.rnu.tn</span>
+                            <span>AI professor</span>
                         </div>
                     </div>
                 </div>
