--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             <h4 class="font-weight-light mb-4 text-white-50">working on it ...</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0 text-white">Houcemedine Hermassi</h5>
-                            <span>Security Profession</span>
+                            <span>Security professor</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
