grammar nazi mode activated
 visalaize ?

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                                     <img class="img-fluid rounded w-100" src="img/matplotlib.png" alt="">
                                 </div>
                                 <h4 class="font-weight-medium text-white">matplot lib</h4>
-                                <h5 class="font-weight-medium text-white-50">the goto library for charting and mathematics visulazation it helped me get my projects the visuals it needed for a concrete demonstration of the results it is easy to use and is very versatile</h5>
+                                <h5 class="font-weight-medium text-white-50">the goto library for charting and mathematics visualization it helped me get my projects the visuals it needed for a concrete demonstration of the results it is easy to use and is very versatile</h5>
                               
                             </div>
 
