--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 During this internship I had the opportunity to accomplish the following tasks:
                                 <ul class="text-white-50"><li> set up and maintain kafka clusters </li>
                                     <li> preform basic system administration tasks from fixing a cron tab to maintaining storage </li>
-                                    <li> Write, enhance and release a sophisticated internet crawler to scrape business-cretical data using scrapy</li>
+                                    <li> Write, enhance and release a sophisticated internet crawler to scrape business-critical data using scrapy</li>
                                     <li> Write well tested and production ready code </li>
                                 </ul> 
                                  
@@ -197,7 +197,7 @@
                             <p class="text-white-50">Following my first Internship as i felt my work there  was not yet done i came back for a second one to build a high  availability application using a load balancer
                                ,angular , spring boot and  the replication  feature during this internship i accomplished the following tasks:
                             <ul class="text-white-50">
-                                <li>set up a virtual environement with different nodes</li>
+                                <li>set up a virtual environment with different nodes</li>
                                 <li>set up and configure an ha load balancer node</li>
                                 <li>set up two intances/nodes , each of which is running an instance of the web application front end and backend</li>
                                 <li>set up two PostgreSQL nodes : a master node receiving traffic from both application and a slave node receiving replication traffic</li>
