more grammar mistakes fixed
 word into world

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">disciplines</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Profeciencies</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Proficiency</h1>
             </div>
 
             
@@ -419,7 +419,7 @@
                         <i class="fa fa-2x fa-lock service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">Security</h4>
                     </div>
-                    <p class="text-white-50">one of my most favourite domains and i find my self eager to learn more everyday , i even listen to security podcasts and am up to date to hackers arise blog and hope one day I too can join the dragons and be dangerous too XD </p>
+                    <p class="text-white-50">one of my most favorite  domains and i find my self eager to learn more everyday , i even listen to security podcasts and am up to date to hackers arise blog and hope one day I too can join the dragons and be dangerous too XD </p>
 
                 </div>
                 
@@ -428,7 +428,7 @@
                         <i class="fa-solid fa-2x fa-microchip service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">Embedded Systems</h4>
                     </div>
-                    <p class="text-white-50">I am very passionate about embdded systems and low level programming languages and inspite of having moderate and modest skills in this domain it is one of the most desciplines in computer science i find my self comfortable with and learn it on the fly </p>
+                    <p class="text-white-50">I am very passionate about embedded systems and low level programming languages and in spite of having moderate knowledge and modest skills in this domain it is one of the most disciplines in computer science i find my self comfortable with and learn it on the fly </p>
                 </div>
 
 
