more grammar mistakes fixed
 word into world

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         <i class="fa-solid fa-2x  fa-gamepad service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">GameDev</h4>
                     </div>
-                    <p class="text-white-50">Having participated in many game jams and developped many minigames and even semi polished fully featured games I can ,with Confidance say that i'm an expert in game logic and coding especially in unity using C#</p>
+                    <p class="text-white-50">Having participated in many game jams and developed  many minigames and even semi polished fully featured games I can ,with confidence,  say that i'm an expert in game logic and coding especially in unity using C#</p>
                 
                 </div>
 
