--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         <i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0 text-white">AI</h4>
                     </div>
-                    <p class="text-white-50">I beleive this domain will define the future of humans , having many projects in ai i beleive it is mendatory for me to use ai in my work to benifit from its intracate feautres</p>
+                    <p class="text-white-50">I believe this domain will define the future for humans , having many projects in ai i believe it is mandatory for me to use ai in my work to benefit from its intracate feautres</p>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center mb-5">
