more grammar mistakes fixed
 word into world

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0 text-white">Front-end Web Design</h4>
                 </div>
-                <p class="text-white-50">Even though it is not my primary passion I am more than capable of desigining and enhancing reactive and adaptive web UI elements, Most of my experience in this domain was using angular as a framework
+                <p class="text-white-50">Even though it is not my primary passion I am more than capable of designing  and enhancing reactive and adaptive web UI elements, Most of my experience in this domain was using angular as a framework
                     my skills in front end design could use some more work though 
                 </p>
              
