added to the npc description
short sad story

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ function closePopup(popup) {
                     <div class="popup" id="myPopup2" aria-hidden="true" onClick="if(event.target == this){closePopup('#myPopup2');}">
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">An early shine</h2>
-                            <p id="popupText2" class="text-white">This bot is built in the world of san andreas multiplayer or samp it was all the rage back in 2011 and servers where day and night filled to the brim , i used pawno to write it using also the dedicated ide pawn</p>
+                            <p id="popupText2" class="text-white">This bot is built in the world of san andreas multiplayer or samp it was all the rage back in 2011 and servers where day and night filled to the brim , i used pawno to write it using also the dedicated ide pawn, unfortunately the code for this one is lost with my old lap top as i didn't even hear of git back then</p>
                             <p  class="text-white">a demonstration can be found <a href="https://www.youtube.com/watch?v=8Fnd5hQa7I4">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup2');" aria-label="Close popup" class="btn btn-sm btn-outline-primary py-2">Close</button>
                         </div>
