--- a/index.html
+++ b/index.html
@@ -894,7 +894,8 @@ function closePopup(popup) {
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">A passion growing wild</h2>
                             <p id="popupText2" class="text-white"> also the first time i ever used a concrete non simulated arduino bord and it felt glorious I want more of this imbedded stuff and feel i can be great at it </p>
-                            <img class="img-fluid rounded w-100 col-lg-4 mb-5" src="img/heatsensor/Capture d’écran (108).png" alt="">
+                            <img class="img-fluid rounded w-100 col-lg-4 mb-5 zoom-without-container" src="img/heatsensor/Capture d’écran (108).png" alt="">
+                            
                             <img class="img-fluid rounded w-100 col-lg-4 mb-5" src="img/heatsensor/Capture d’écran (110).png" alt="">
                             <img class="img-fluid rounded w-100 col-lg-4 mb-5" src="img/heatsensor/Capture d’écran (113).png" alt="">
                             <img class="img-fluid rounded w-100 col-lg-4 mb-5" src="img/heatsensor/Capture d’écran (125).png" alt="">
