added more icons
 icons show what the project uses as technologies

--- a/index.html
+++ b/index.html
@@ -939,6 +939,16 @@ function closePopup(popup) {
                         <img class="img-fluid rounded w-100" src="img/ether.jpg" alt="">
                         
                     </div>
+
+                    <i class="fa-brands fa-ethereum"></i>
+                    <i class="fa-solid fa-gas-pump"></i>
+                    <i class="fa-solid fa-money-bill-trend-up"></i>
+                    <i class="fa-brands fa-js"></i>
+                    <i class="fa-brands fa-vuejs"></i>
+
+
+
+
                     <h5 class="font-weight-medium mb-4 text-white-50"><strong class="text-white">A bank accounts management strategy on a blockchain</strong> a very smooth journey in the world of block chains </h5>
                     <a class="btn btn-sm btn-outline-primary py-2" onClick="openPopup('#myPopup4')">Demonstration</a>
                     
