--- a/index.html
+++ b/index.html
@@ -1046,15 +1046,13 @@ function closePopup(popup) {
                         <img class="img-fluid rounded w-100" src="img/spooder.png" alt="">
                         
                     </div>
-                  <i class="fa-brands fa-python"> </i>
-
-                  <i class="fa-brands fa-guilded"> </i>
-
-                  <i class="fa-brands fa-linux"> </i>
-
-                  <i class="fa-brands fa-windows"></i>
-
-                  <i class="fa-brands fa-android"></i>
+                    <!-- start of icons section -->
+                    <i class="fa-solid fa-globe"></i>
+                    <i class="fa-solid fa-spider"></i>
+                    <i class="fa-brands fa-bots"></i>
+                    <i class="fa-solid fa-database"></i>
+                    <i class="fa-solid fa-robot"></i>
+                    <!-- end of icons section -->
 
 
 
