grammmar mistakes fixed

--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,8 @@ function closePopup(popup) {
                     <div class="popup" id="myPopupN" aria-hidden="true" onClick="if(event.target == this){closePopup('#myPopupN');}">
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">I can creat anything ,turn nothing into somthing</h2>
-                            <p id="popupText2" class="text-white"> The said make a desktop java app so I made a game engine ofc i wouldn't dare call this a game engine as it doesn't run on opengl nor that it defines its shader graphs or complexe physics
+                            <p id="popupText2" class="text-white"> They said make a desktop javafx app so I made a game engine . 
+                                ofc i wouldn't dare call this a game engine as it doesn't run on opengl nor that it defines its shader graphs or complexe physics
                                 but i did manage to turn a javafx application into a playable platformer super mario wallmart version yaaay
                                 find a demonstration <a href="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/view?usp=sharing">here</a> 
                             </p>
