--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ function closePopup(popup) {
                                 ofc i wouldn't dare call this a game engine as it doesn't run on opengl nor that it defines its shader graphs or complexe physics
                                 but i did manage to turn a javafx application into a playable platformer super mario wallmart version yaaay
                                 <br>
-                                <iframe style="border: 0.15em solid rgb(17, 164, 193);width:100%;display: flex;justify-content:center;left: 50%;top: 20%;" allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/preview" width="640" height="480" allow="autoplay"></iframe>
+                                <iframe style="border: 0.15em solid rgb(17, 164, 193);height:260px;width:400px;display: flex;justify-content:center;" allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/preview" width="640" height="480" allow="autoplay"></iframe>
                                 <br>
                                 you can download the  demonstration above <a href="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/view?usp=sharing">here</a> 
                                
