--- a/index.html
+++ b/index.html
@@ -857,7 +857,9 @@ function closePopup(popup) {
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">The Purple Ninja</h2>
                             <p id="popupText" class="text-white">This game is set in the naruto world and you control the character moves using your webcame and hand gestures , this is a simple proof of concept and not a finished project and is intended to show my capability of developping computer vision reliant applications</p>
-                            <p  class="text-white">a demonstration can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
+                            
+                            <iframe src="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/preview" width="640" height="480" allow="autoplay" style="border: 0.15em solid rgb(17, 164, 193);display: flex;justify-content:center;"></iframe>    
+                            <p  class="text-white">the demonstration above can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup');" aria-label="Close popup" class="btn btn-outline-light mr-5">Close</button>
                         </div>
                     </div>
@@ -1117,11 +1119,13 @@ function closePopup(popup) {
                                 ofc i wouldn't dare call this a game engine as it doesn't run on opengl nor that it defines its shader graphs or complexe physics
                                 but i did manage to turn a javafx application into a playable platformer super mario wallmart version yaaay
                                 <br>
-                                <iframe style="border: 0.15em solid rgb(17, 164, 193);height:260px;width:400px;display: flex;justify-content:center;" allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/preview" width="640" height="480" allow="autoplay"></iframe>
+                                <iframe width="640" height="480" style="border: 0.15em solid rgb(17, 164, 193);display: flex;justify-content:center;margin:20px ;" allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/preview" width="640" height="480" allow="autoplay" allowfullscreen="allowfullscreen"></iframe>
                                 <br>
                                 you can download the  demonstration above <a href="https://drive.google.com/file/d/1i0-P1BAVEvalmSNUT36t6IM5dCwcXAoQ/view?usp=sharing">here</a> 
                                
                             </p>
+                            <br>
+                        <br>
                             <button id="closePopupN" onClick="closePopup('#myPopupN');" aria-label="Close popup" class="btn btn-outline-light mr-5">Close</button>
                         </div>
                     </div>
