fixed full screen purple ninja

--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ function closePopup(popup) {
                             <h2 id="popupTitle">The Purple Ninja</h2>
                             <p id="popupText" class="text-white">This game is set in the naruto world and you control the character moves using your webcame and hand gestures , this is a simple proof of concept and not a finished project and is intended to show my capability of developping computer vision reliant applications</p>
                             
-                            <iframe src="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/preview" width="640" height="480" allow="autoplay" style="border: 0.15em solid rgb(17, 164, 193);display: flex;justify-content:center;"></iframe>    
+                            <iframe allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/preview" width="640" height="480" allow="autoplay" style="border: 0.15em solid rgb(17, 164, 193);display: flex;justify-content:center;"></iframe>    
                             <p  class="text-white">the demonstration above can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup');" aria-label="Close popup" class="btn btn-outline-light mr-5">Close</button>
                         </div>
