--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@ function closePopup(popup) {
                             <p id="popupText" class="text-white">This game is set in the naruto world and you control the character moves using your webcame and hand gestures , this is a simple proof of concept and not a finished project and is intended to show my capability of developping computer vision reliant applications</p>
                             
                             <iframe allowfullscreen="allowfullscreen" src="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/preview" width="80%" height="400px" allow="autoplay" allowfullscreen="allowfullscreen" style="border: 0.15em solid rgb(17, 164, 193);display: flex;justify-content:center;"></iframe>    
-                            <p  class="text-white">the demonstration above can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
+                            <p  class="text-white">this demonstration above can be found <a href="https://drive.google.com/file/d/1gHVrGFKQ0BUG4kI0XQs-PTcvaF5QQQFE/view?usp=sharing">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup');" aria-label="Close popup" class="btn btn-outline-light mr-5">Close</button>
                         </div>
                     </div>
