--- a/index.html
+++ b/index.html
@@ -891,6 +891,9 @@ function closePopup(popup) {
                         <div class="wrapper" aria-labelledby="popupTitle" aria-describedby="popupText" aria-modal="true">
                             <h2 id="popupTitle">An early shine</h2>
                             <p id="popupText2" class="text-white">This bot was built in the world of san andreas multiplayer or samp it was all the rage back in 2011 and servers where day and night filled to the brim , i used pawno to write it using also the dedicated ide pawn, unfortunately the code for this one is lost with my old lap top as i didn't even hear of git back then i wanted to demonstrate here my affinity to programming from an early age (before i even been tought to programe)</p>
+                           
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/8Fnd5hQa7I4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                           
                             <p  class="text-white">a demonstration can be found <a href="https://www.youtube.com/watch?v=8Fnd5hQa7I4">here</a></p>
                             <button id="closePopup" onClick="closePopup('#myPopup2');" aria-label="Close popup" class="btn btn-outline-light mr-5">Close</button>
                         </div>
