new cv new section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">schooling</a>
+                <a href="#qualification" class="nav-item nav-link">Expericence</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
                 <a href="#service" class="nav-item nav-link">Domains</a>
                 <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
@@ -203,6 +203,20 @@
                                 <li>set up two PostgreSQL nodes : a master node receiving traffic from both application and a slave node receiving replication traffic</li>
                                 <li>develop a proof of concept web application using mvn spring boot and angular with very simple ui </li>
                                 <li>benchmark the set up using apache benchmark tool</li>
+                            </ul>
+                            
+                            </p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1 text-white">Internship</h5>
+                            <p class="mb-2 text-white"><strong>Infor</strong> | <small>2023/03/01 - 2023/07/01(present)</small></p>
+                            <p class="text-white-50">As a Software QA intern at Infor, I have had the opportunity to gain valuable hands-on experience in ensuring the quality and reliability of software products. My responsibilities have included conducting comprehensive testing, identifying and documenting bugs, and collaborating with the development team to implement effective solutions. I have been actively involved in test planning, test case creation, and execution, as well as assisting in the creation and maintenance of test environments. Throughout my internship, I have learned to use various testing tools and techniques to enhance the overall quality of the software. Working closely with experienced QA professionals, I have gained insights into the software development lifecycle and cultivated strong analytical and problem-solving skills. Overall, my internship at Infor has provided me with a solid foundation in software quality assurance and a valuable understanding of industry best practices.
+                                During my internship i accomplished the following tasks:
+                            <ul class="text-white-50">
+                                <li>Wrote automation scripts</li>
+                                <li>Useed jenkins automation </li>
+                                <li>Devised Test cases</li>
                             </ul>
                             
                             </p>
