--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Ben Mansour Mahdi</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Computer science engineer, AI Developer, Data scientist, BlockChain Developer, Security enthusiast, FullStack web Dev, Problem solver, Apps designer, Apps Developer</div>
+                    <div class="typed-text d-none">QA Engineer, AI Developer, Data scientist, BlockChain Developer, Security enthusiast, FullStack web Dev, Problem solver, Apps designer, Apps Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="./CV.pdf" class="btn btn-outline-light mr-5" download="MahdiBenMansourCV_2022-2023.pdf">Download CV</a>
                             
