--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">QA Engineer, AI Developer, Data scientist, BlockChain Developer, Security enthusiast, FullStack web Dev, Problem solver, Apps designer, Apps Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="./CV.pdf" class="btn btn-outline-light mr-5" download="MahdiBenMansourCV_2022-2023.pdf">Download CV</a>
+                        <a href="./CV.pdf" class="btn btn-outline-light mr-5" download="CV_BM_Mahdi_11_10.pdf">Download CV</a>
                             
                     </div>
                 </div>
