a cv updated and no longer a student XD

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">QA Engineer, AI Developer, Data scientist, BlockChain Developer, Security enthusiast, FullStack web Dev, Problem solver, Apps designer, Apps Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="./CV_BM_Mahdi_11_10.pdf" class="btn btn-outline-light mr-5" download="CV_BM_Mahdi_11_10.pdf">Download CV</a>
+                        <a href="./CV_BenMansour_Mahdi.pdf" class="btn btn-outline-light mr-5" download="CV_BenMansour_Mahdi.pdf">Download CV</a>
                             
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-white-50">
-                    <h3 class="mb-4 text-white">A Computer Science Engineering Student</h3>
+                    <h3 class="mb-4 text-white">A Computer Science Engineer , (a true master is eternal strudent)</h3>
                     <p><strong class="text-white">Always tinkering at something:</strong> a young legendary Engineer in the making.
                         Since my early days I always dreamed one day to become one of the leading talents in the IT world
                         I have an immense hunger for knowledge and will spare no effort to achieve my goal </p>
