i am what i say i am
fixing experiences

--- a/index.html
+++ b/index.html
@@ -170,12 +170,15 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1 text-white">Permanent Position</h5>
                             <p class="mb-2 text-white"><strong>Infor</strong> | <small>2023/08/01 - present</small></p>
-                            <p class="text-white-50"><b>QA Analyst Associate:</b> in my role at Infor as a , I have demonstrated expertise in Quality Assurance by successfully implementing test automation using Selenium, Jenkins, and Java. Leveraging these powerful tools, I have contributed to the optimization of our testing processes, ensuring the delivery of high-quality software products. My work involves developing and maintaining automated test scripts, executing test suites, and integrating them into the Jenkins Continuous Integration (CI) pipeline. This experience has not only enhanced the efficiency of our testing procedures but has also showcased my proficiency in Java programming, allowing me to effectively identify and rectify defects and anomalies in our software solutions. My commitment to driving excellence in QA through automation has been a valuable asset to the Infor team.
-                                During my work  i accomplished the following tasks:
+                            <p class="text-white-50"><b  class="text-white">Full stack engineer:</b> In my role at Infor as a Full Stack Engineer, I have demonstrated expertise in designing, developing, and optimizing web applications by leveraging modern technologies across both frontend and backend development. My work involves creating scalable and efficient solutions using JavaScript, React, Django, and SQL, ensuring seamless user experiences and robust system performance.
+
+                                I have contributed to the development lifecycle by implementing RESTful APIs, enhancing database structures, and integrating CI/CD pipelines with Jenkins to streamline deployments. Additionally, my experience with cloud platforms and automation has allowed me to build resilient, high-performing applications that meet business needs. My proficiency in full-stack development has enabled me to troubleshoot complex issues, optimize application performance, and deliver high-quality software solutions.
+                                
+                                During my work, I accomplished the following tasks:
                             <ul class="text-white-50">
-                                <li>Wrote automation scripts</li>
-                                <li>Used jenkins automation </li>
-                                <li>Devised Test cases</li>
+                                <li>Developed and maintained frontend components using React.</li>
+                                <li>Designed and optimized backend services with Csharp and SQL.</li>
+                                <li>Integrated CI/CD automation with Jenkins for streamlined deployments.</li>
                             </ul>
                             
                             </p>
