i am what i say i am
now became full stack web hist

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Ben Mansour Mahdi</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">QA Engineer, AI Developer, Data scientist, BlockChain Developer, Security enthusiast, FullStack web Dev, Problem solver, Apps designer, Apps Developer</div>
+                    <div class="typed-text d-none">Cloud Engineer, FullStack Developer,Security enthusiast,Problem solver</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="./CV_BenMansour_Mahdi.pdf" class="btn btn-outline-light mr-5" download="CV_BenMansour_Mahdi.pdf">Download CV</a>
                             
