--- a/index.html
+++ b/index.html
@@ -273,8 +273,6 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
 
-
-                    
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold text-white">python</h6>
@@ -374,7 +372,7 @@
 
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold text-white">PHP</h6>
+                            <h6 class="font-weight-bold text-white">Jenkins</h6>
                             <h6 class="font-weight-bold text-white-50">65%</h6>
                         </div>
                         <div class="progress">
@@ -389,10 +387,10 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold text-white">CSS</h6>
-                            <h6 class="font-weight-bold text-white-50">40%</h6>
+                            <h6 class="font-weight-bold text-white-50">70%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
